Fix 6 broken e2e tests across Chrome, Firefox, Edge, and Android Native CI jobs (#2323)
* Initial plan

* Fix broken e2e tests: path resolution, website URL, accessibility catch, parallel safety, navigation, and file encoding

Co-authored-by: MohabMohie <19201898+MohabMohie@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>
Co-authored-by: MohabMohie <19201898+MohabMohie@users.noreply.github.com>